--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 PORT=3000
-MONGO_URI=mongodb://localhost:27017/myabag
+MONGO_URI=mongodb+srv://mry097760:7xeNjZ3CGrIBYSNg@myabag.pvoeptg.mongodb.net/?retryWrites=true&w=majority&appName=myabag
 JWT_SECRET=mySuperSecretKey
 JWT_EXPIRES_IN=7d
 EMAIL_USER=krystal60@ethereal.email
