--- a/.env
+++ b/.env
@@ -4,4 +4,4 @@ JWT_SECRET=mySuperSecretKey
 JWT_EXPIRES_IN=7d
 EMAIL_USER=krystal60@ethereal.email
 EMAIL_PASS=AZvfr4A3y1M9cBm4Gu
-BASE_URL=http://localhost:3000
+BASE_URL=https://myabag-backend.vercel.app
