Integrate Cloudinary for image uploads and updates in product management; update product schema to store image URLs and public IDs. Add Cloudinary dependencies and update environment configuration.

--- a/.env
+++ b/.env
@@ -4,4 +4,10 @@ JWT_SECRET=mySuperSecretKey
 JWT_EXPIRES_IN=7d
 EMAIL_USER=krystal60@ethereal.email
 EMAIL_PASS=AZvfr4A3y1M9cBm4Gu
-BASE_URL=https://myabag-backend.vercel.app
+BASE_URL=
+
+CLOUDINARY_CLOUD_NAME=dwpcsalfp
+
+CLOUDINARY_API_KEY=814924516256237
+
+CLOUDINARY_API_SECRET=Tk76bVTQG140wwLy_Os0hKApXKY
